<resources>
    <string name="app_name">internship first</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_here">Login Here</string>
    <string name="welcome_back"></string>
    <string name="email">Email</string>
    <string name="forget">forget your password?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create">create new account</string>
    <string name="or">Or continue with</string>
</resources>