<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
        <TextView
            style="@style/text_20"
            android:text="Login Here"
            android:textStyle="bold"
            android:textColor="#1F41BB"
            />

        <TextView
            style="@style/text_20"
            android:text="Welcome Back You Have've\nBeen Missed!"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="70dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:background="@drawable/back"
            android:padding="10dp"
            android:id="@+id/login_email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:padding="10dp"
            android:background="@drawable/back"
            android:id="@+id/login_password"
            />

        <TextView
            style="@style/text_14"
            android:text="@string/forget"
            android:textColor="#1F41BB"
            android:layout_gravity="end"
            android:layout_marginBottom="30dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/design"
            android:id="@+id/login_signup"
            />

        <TextView
            style="@style/text_15"
            android:text="@string/create"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or continue with"
            android:textColor="#1F41BB"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/google"
                android:background="@drawable/back"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="20dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/facebook"
                android:background="@drawable/back"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/apple"
                android:background="@drawable/back"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>