<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome back ! you've\nbeen missed"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="20dp"
        >
    <EditText
        style="@style/edittext"
        android:hint="@string/email"
        android:layout_marginTop="70dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        android:background="@drawable/back"
        />

    <EditText
        style="@style/edittext"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:background="@drawable/back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="forget your password?"
        android:textColor="@color/blue"
        android:layout_gravity="end"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@null"
        android:background="@drawable/design"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create new account"
        android:layout_marginTop="15dp"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/blue"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/google"
            android:background="@drawable/back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="20dp"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook"
            android:background="@drawable/back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/apple"
            android:background="@drawable/back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>